# melthelm-poc

./: .dockerignore  .gitignore  README.md  meltano.yml  pyproject.toml
deploy/helm/airflow/templates/webserver/: deployment.yaml
deploy/helm/meltano/: Chart.yaml  values.yaml
deploy/helm/meltano/charts/airflow/: Chart.yaml
deploy/helm/meltano/charts/airflow/templates/scheduler/: scheduler-deployment.yaml
deploy/helm/meltano/charts/airflow/templates/webserver/: webserver-deployment.yaml
deploy/helm/meltano/templates/: deployment.yaml
deploy/local/: .dockerignore  .gitignore  Dockerfile  main.tf  nfs-server-provider-values.yml  providers.tf  variables.tf
deploy/local/modules/dev_images/: main.tf  providers.tf
deploy/local/modules/kind_cluster/: README.md  main.tf  outputs.tf  providers.tf
deploy/local/modules/postgres/: main.tf  providers.tf
orchestrate/: pod-template-file.yml
orchestrate/dags/: meltano.py
