[tool.poetry]
name = "poc-meltano-helm-chart"
version = "0.1.0"
description = ""
authors = ["kgpayne <ken@meltano.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
meltano = "^1.79.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
